# XII-Samples

./: README.md
Data/Samples/ShaderExplorer/Materials/: screen.xiiMaterial
Data/Samples/ShaderExplorer/Shaders/: Common.h  SignedDistanceUtils.h  aoTest.xiiShader
Data/Samples/TextureSample/Materials/: Texture.xiiMaterial
Data/Samples/TextureSample/Shaders/: Common.h  SampleConstantBuffer.h  Texture.xiiShader
Source/Samples/: CMakeLists.txt
Source/Samples/GraphicsExplorer/: CMakeLists.txt  GraphicsExplorer.cpp  GraphicsExplorer.h
Source/Samples/LineCount/: CMakeLists.txt  LineCount.cpp
Source/Samples/SampleWindow/: CMakeLists.txt  SampleWindow.cpp  SampleWindow.h
Source/Samples/ShaderExplorer/: CMakeLists.txt  ShaderExplorer.cpp
Source/Samples/TextureSample/: CMakeLists.txt  TextureSample.cpp
